# maiInsight

./: .gitignore  AGENT_ENHANCEMENT_SUGGESTIONS.md  FIX_AGENT_ISSUE.md  RAG_AGENT_IMPLEMENTATION.md  RESTART_REQUIRED.md  RESTART_SERVER.md  TODAYS_WORK_SUMMARY.md  check_databases.py  check_server.py  create_organized_documents.py  ingest_rag_documents.py  pyproject.toml  rag_documents_extracted.json  read_rag_documents.py  requirements.txt  run_backend.py  start_web_app.bat  start_web_app.sh  stop_server.py  test_build_agent.py  test_frontend_setup.py  test_postgres_connection.py  test_server.py  test_setup.py  verify_server.py
backend/: app.py
backend/agents/: __init__.py  agent.py  auto_refresh_agent.py  base_agent.py  build_summary_agent.py  chatbot_agent.py  data_display_agent.py  data_reader_agent.py  historical_data_agent.py  rag_build_agent.py
backend/config/: settings.py
docs/: AGENT_USAGE_ANALYSIS.md  AGENT_USAGE_SUMMARY.md  ARCHITECTURE_DECISION.md  CHATBOT_DATA_VIEWER.md  CHATBOT_IMPLEMENTATION_SUMMARY.md  CREATE_ENV.md  FILE_LOADING_GUIDE.md  FILE_LOADING_SUMMARY.md  FOLDER_STRUCTURE.md  FRONTEND_SETUP.md  GETTING_STARTED.md  GETTING_STARTED_DEVELOPMENT.md  IMPLEMENTATION_BLUEPRINT.md  POSTGRESQL_SETUP.md  QUICK_START.md  README.md  RUNNING_APPLICATION.md  S3_LOADING_GUIDE.md  SETUP_COMPLETE.md  SUMMARY.md  TODAYS_WORK_SUMMARY_20251118.md  TOOLING_RECOMMENDATIONS.md  env.template
rag_documents/: PROCESS.docx  RAG 1 DOMAIN KNOWLEDGE.docx  RAG 3 SYSTEM ARCHITECTURE.docx  RAG2 CONTEXTUAL MEMORY.docx  RAG2b DATABASE SCHEMAS.docx  README.md
(+37 files in other folders)
